mobile/Search/family_list: Retain search across close/reopen

--- a/model/notebooks/scratch.ipynb
+++ b/model/notebooks/scratch.ipynb
@@ -595,6 +595,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "time": "2.79s"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "INFO     [17:55:26.612] [51877] 151 logging_/<module>: {logging_yaml: None}"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n"
+    }
+   ],
+   "source": [
+    "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir = '/Users/danb/hack/birdgram/mobile/app'\n",
+    "json_path = f'{dir}/foo.json'\n",
+    "sql_path = f'{dir}/bar.sqlite3'\n",
+    "db_url = f'sqlite:///{path}'\n",
+    "df = pd.read_json(json_path)\n",
+    "with sqla_oneshot_eng_conn_tx(db_url) as conn:\n",
+    "    df.to_sql('foo', conn, index=False, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_path = '/Users/danb/hack/birdgram/mobile/app/assets/payloads/CA100/search_recs/metadata/species.json'\n",
+    "df = pd.read_json(json_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[lambda df: df.com_name.str.lower().str.contains('vireo')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -602,9 +658,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
