[wip] mobile/Search: family_list + windowed query

--- a/model/notebooks/scratch.ipynb
+++ b/model/notebooks/scratch.ipynb
@@ -598,18 +598,7 @@
    "metadata": {
     "time": "2.79s"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "INFO     [17:55:26.612] [51877] 151 logging_/<module>: {logging_yaml: None}"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from notebooks import *"
    ]
@@ -658,9 +647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
