mobile/Search: Revert sqlite 3.26.0 -> 3.24.x (builtin); revert windowed -> union query

--- a/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
+++ b/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "1.231s"
+    "time": "1.425s"
    },
    "outputs": [],
    "source": [
@@ -442,6 +442,65 @@
     "              order by\n",
     "                slp asc, d_pc asc\n",
     "              limit 31"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Revert window query -> union query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "1.712s"
+   },
+   "outputs": [],
+   "source": [
+    "%%sqla -ceng -Iplan -p3\n",
+    "--# Union query, from before window query + other improvements\n",
+    "select\n",
+    "  S.*,\n",
+    "  coalesce(slp.slp, 1e38) as slp\n",
+    "--# Must select * from (...) else union complains about nested order by\n",
+    "from (select * from (\n",
+    "  select\n",
+    "    S.*,\n",
+    "    1 - (S.f_preds_0*Q.f_preds_0 + S.f_preds_1*Q.f_preds_1) / S.norm_f_preds / Q.norm_f_preds as d_pc\n",
+    "  from search_recs S\n",
+    "    left join (select * from search_recs where source_id = 'xc:417354') Q on true --# Only 1 row in Q\n",
+    "  where true\n",
+    "    and S.species = 'NOWA'\n",
+    "    --# Empty subquery for species outside of placeFilter\n",
+    "    and S.quality in ('A', 'B')\n",
+    "    and S.source_id != 'xc:417354' --# Exclude query_rec from results\n",
+    "  order by\n",
+    "    d_pc asc\n",
+    "  limit 3\n",
+    ") union all select * from (\n",
+    "  select\n",
+    "    S.*,\n",
+    "    1 - (S.f_preds_0*Q.f_preds_0 + S.f_preds_1*Q.f_preds_1) / S.norm_f_preds / Q.norm_f_preds as d_pc\n",
+    "  from search_recs S\n",
+    "    left join (select * from search_recs where source_id = 'xc:417354') Q on true --# Only 1 row in Q\n",
+    "  where true\n",
+    "    and S.species = 'WIWA'\n",
+    "    --# Empty subquery for species outside of placeFilter\n",
+    "    and S.quality in ('A', 'B')\n",
+    "    and S.source_id != 'xc:417354' --# Exclude query_rec from results\n",
+    "  order by\n",
+    "    d_pc asc\n",
+    "  limit 3\n",
+    ")) S\n",
+    "  left join (\n",
+    "    select column1 as species, column2 as slp from (values ('NOWA', 2.7278727231365987), ('WIWA', 2.826477946769426))\n",
+    "  ) slp on S.species = slp.species\n",
+    "order by\n",
+    "  slp asc,\n",
+    "  d_pc asc\n",
+    "limit 31"
    ]
   },
   {
