mobile/Search: Add sqlite indexes for fast exclude/include (else ~5s slow)

--- a/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
+++ b/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "time": "2.344s"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# sqlite_path = '/Users/danb/hack/birdgram/mobile/app/assets/payloads/CA100/search_recs/search_recs.sqlite3'\n",
@@ -643,14 +641,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3 -Iplan -Olen\n",
+    "select distinct species\n",
+    "from search_recs S\n",
+    "--# indexed by ix_search_recs__source_id\n",
+    "--# indexed by ix_search_recs__species\n",
+    "--# indexed by ix_search_recs__species__source_id\n",
+    "--# indexed by ix_search_recs__species__species_species_group__quality__source_id --# TODO WORKS (so far)\n",
+    "--# indexed by ix_search_recs__species_species_group__species__quality__source_id\n",
+    "--# indexed by ix_search_recs__source_id__species\n",
+    "where true\n",
+    "    and S.species in ('BBWD', 'FUWD', 'EMGO', 'SNGO', 'ROGO', 'GWFG', 'TABG', 'TUBG', 'BRAN', 'CACG', 'CANG', 'MUSW', 'TRUS', 'TUSW', 'WHOS', 'EGGO', 'MUDU', 'WODU', 'manduc', 'GARG', 'BWTE', 'CITE', 'NSHO', 'GADW', 'FADU', 'EUWI', 'AMWI', 'NOPI', 'GWTE', 'CANV', 'REDH', 'COMP', 'RNDU', 'TUDU', 'GRSC', 'LESC', 'KIEI', 'COEI', 'HADU', 'SUSC', 'COSC', 'BLSC', 'LTDU', 'BUFF', 'COGO', 'BAGO', 'HOME', 'COME', 'RBME', 'RUDU', 'MOUQ', 'CAQU', 'GAQU', 'INPE', 'CHUK', 'RNEP', 'RUGR', 'GRSG', 'WTPT', 'SOGR', 'WITU', 'PBGR', 'HOGR', 'RNGR', 'EAGR', 'WEGR', 'CLGR', 'RODO', 'BTPI', 'EUCD', 'AFCD', 'SPDO', 'INDO', 'COGD', 'RUGD', 'WWDO', 'MODO', 'GBAN', 'GRRO', 'YBCU', 'BBCU', 'COCU', 'LENI', 'CONI', 'COPO', 'EWPW', 'MWPW', 'BLSW', 'CHSW', 'VASW', 'COSW', 'WTSW', 'BTHH', 'RTHU', 'BCHU', 'ANHU', 'COHU', 'BTAH', 'RUHU', 'ALHU', 'CAHU', 'BBIH', 'VCHU', 'RIRA', 'VIRA', 'SORA', 'COGA', 'AMCO', 'PUGA', 'YERA', 'BLRA', 'SACR', 'CCRA', 'BNST', 'AMAV', 'AMOY', 'BLOY', 'BBPL', 'AMGP', 'PAGP', 'LSAP', 'SNPL', 'WIPL', 'CRPL', 'SEPL', 'KILL', 'MOPL', 'UPSA', 'WHIM', 'LBCU', 'BTGO', 'HUGO', 'MAGO', 'RUTU', 'BLTU', 'REKN', 'SURF', 'RUFF', 'SPTS', 'STSA', 'CUSA', 'RNST', 'SAND', 'DUNL', 'ROSA', 'PUSA', 'BASA', 'LIST', 'LESA', 'WRSA', 'BBSA', 'PESA', 'SESA', 'WESA', 'SBDO', 'LBDO', 'AMWO', 'COSN', 'WISN', 'WIPH', 'RNPH', 'REPH', 'SPSA', 'SOSA', 'WATA', 'GRYE', 'WILL', 'LEYE', 'MASA', 'WOSA', 'SPSK', 'POJA', 'PAJA', 'LTJA', 'COMU', 'TBMU', 'PIGU', 'LBMU', 'MAMU', 'SCMU', 'GUMU', 'CRMU', 'ANMU', 'CAAU', 'PAAU', 'RHAU', 'HOPU', 'TUPU', 'STGU', 'BLKI', 'IVGU', 'SAGU', 'BOGU', 'BHGU', 'LIGU', 'ROGU', 'LAGU', 'FRGU', 'BTGU', 'HEEG', 'MEGU', 'RBGU', 'WEGU', 'YFGU', 'CAGU', 'HERG', 'ICGU', 'LBBG', 'SBGU', 'GWGU', 'GLGU', 'GBBG', 'KEGU', 'SOTE', 'BRTE', 'LETE', 'GBTE', 'CATE', 'BLTE', 'COTE', 'ARTE', 'FOTE', 'ROYT', 'ELTE', 'BLSK', 'RBTR', 'RTTR', 'RTLO', 'ARLO', 'PALO', 'COLO', 'YBLO', 'SAAL', 'LAAL', 'BFAL', 'STAL', 'WISP', 'FTSP', 'LESP', 'TOSP', 'ASSP', 'BSTP', 'WRSP', 'BLSP', 'LSTP', 'NOFU', 'GFPE', 'KEPE', 'MUPE', 'MOPE', 'HAPE', 'COPE', 'STPE', 'JOPE', 'WCPE', 'COSH', 'PFSH', 'FFSH', 'GRSH', 'WTSH', 'BULS', 'SOSH', 'SRTS', 'MASH', 'BVSH', 'WOST', 'MAFR', 'GREF', 'MABO', 'NABO', 'BFBO', 'BRBO', 'RFBO', 'NOGA', 'BRAC', 'PECO', 'NECO', 'DCCO', 'AWPE', 'BRPE', 'AMBI', 'LEBI', 'GBHE', 'GREG', 'SNEG', 'LBHE', 'TRHE', 'REEG', 'CAEG', 'GRHE', 'BCNH', 'YCNH', 'WHIB', 'GLIB', 'WFIB', 'ROSP', 'CACO', 'BLVU', 'TUVU', 'OSPR', 'WTKI', 'STKI', 'GOEA', 'MIKI', 'NOHA', 'SSHA', 'COHA', 'NOGO', 'BAEA', 'COBH', 'HASH', 'GRHA', 'RSHA', 'BWHA', 'SWHA', 'ZTHA', 'RTHA', 'RLHA', 'FEHA', 'BANO', 'FLOW', 'WESO', 'GHOW', 'SNOW', 'NOPO', 'ELOW', 'BUOW', 'SPOW', 'BADO', 'GGOW', 'LEOW', 'SEOW', 'NSWO', 'BEKI', 'EUWR', 'WISA', 'YBSA', 'RNSA', 'RBSA', 'LEWO', 'ACWO', 'GIWO', 'BBWO', 'DOWO', 'NUWO', 'LBWO', 'HAWO', 'WHWO', 'PIWO', 'NOFL', 'GIFL', 'CRCA', 'AMKE', 'MERL', 'GYRF', 'PEFA', 'PRFA', 'RRPA', 'MOPA', 'WWPA', 'yecpar', 'RCPA', 'LCPA', 'RLPA', 'YHPA', 'YCPA', 'TFAM', 'WFPA', 'NAPA', 'bucpar', 'MIPA', 'RMPA', 'OSFL', 'GRPE', 'WEWP', 'EAWP', 'YBFL', 'ALFL', 'WIFL', 'LEFL', 'HAFL', 'GRFL', 'DUFL', 'PSFL', 'COFL', 'BBFL', 'BLPH', 'EAPH', 'SAPH', 'VEFL', 'DCFL', 'ATFL', 'GCFL', 'BCFL', 'SBFL', 'TRKI', 'COKI', 'CAKI', 'TBKI', 'WEKI', 'EAKI', 'STFL', 'BROS', 'LOSH', 'NSHR', 'WEVI', 'BEVI', 'GRVI', 'HUVI', 'YTVI', 'CAVI', 'BHVI', 'PLVI', 'PHVI', 'WAVI', 'YGVI', 'GRAJ', 'BTMJ', 'PIJA', 'STJA', 'BLJA', 'ISSJ', 'CASJ', 'WOSJ', 'BBMA', 'YBMA', 'CLNU', 'AMCR', 'CORA', 'HOLA', 'EUSK', 'NRWS', 'PUMA', 'TRES', 'VGSW', 'BANS', 'BARS', 'CLSW', 'CASW', 'BCCH', 'MOCH', 'CBCH', 'OATI', 'JUTI', 'VERD', 'BUSH', 'RBNU', 'WBNU', 'PYNU', 'BRCR', 'ROWR', 'CANW', 'HOWR', 'PAWR', 'WIWR', 'SEWR', 'MAWR', 'BEWR', 'CACW', 'BGGN', 'CAGN', 'BTGN', 'AMDI', 'RWBU', 'GCKI', 'RCKI', 'DUWA', 'ARWA', 'WREN', 'JAWE', 'BLUE', 'RFBL', 'NOWH', 'WEBL', 'MOBL', 'TOSO', 'VATH', 'VEER', 'GCTH', 'SWTH', 'HETH', 'WOTH', 'AMRO', 'RBRO', 'GRCA', 'CBTH', 'BRTH', 'BETH', 'CATH', 'LCTH', 'CRTH', 'SATH', 'NOMO', 'EUST', 'EYWA', 'CIWA', 'WHWA', 'OBPI', 'RTPI', 'AMPI', 'SPPI', 'BOWA', 'CEDW', 'PHAI', 'BRAM', 'EVGR', 'HAWF', 'PIGR', 'GCRF', 'BLRF', 'HOFI', 'PUFI', 'CAFI', 'CORE', 'RECR', 'WWCR', 'EUGO', 'PISI', 'LEGO', 'LAGO', 'AMGO', 'LALO', 'CCLO', 'SMLO', 'MCLO', 'SNBU', 'LIBU', 'RUBU', 'CASP', 'GRSP', 'CHSP', 'CCSP', 'BCSP', 'FISP', 'BRSP', 'BTSP', 'LASP', 'LARB', 'ATSP', 'FOSP', 'DEJU', 'WCSP', 'GCSP', 'HASP', 'WTSP', 'SABS', 'BESP', 'VESP', 'LCSP', 'NESP', 'SAVS', 'BAIS', 'SOSP', 'LISP', 'SWSP', 'ABTO', 'CALT', 'RCSP', 'GTTO', 'SPTO', 'YBCH', 'YHBL', 'BOBO', 'WEME', 'EAME', 'OROR', 'HOOR', 'SBAO', 'BUOR', 'BAOR', 'SCOR', 'RWBL', 'TRBL', 'BROC', 'BHCO', 'RUBL', 'BRBL', 'COGR', 'GTGR', 'OVEN', 'WEWA', 'LOWA', 'NOWA', 'GWWA', 'BWWA', 'BAWW', 'PROW', 'TEWA', 'OCWA', 'LUWA', 'NAWA', 'VIWA', 'CONW', 'MGWA', 'MOWA', 'KEWA', 'COYE', 'HOWA', 'AMRE', 'CMWA', 'CERW', 'NOPA', 'TRPA', 'MAWA', 'BBWA', 'BLBW', 'YEWA', 'CSWA', 'BLPW', 'BTBW', 'PAWA', 'PIWA', 'YRWA', 'YTWA', 'PRAW', 'GRWA', 'BTYW', 'TOWA', 'HEWA', 'BTNW', 'CAWA', 'WIWA', 'RFWA', 'PARE', 'HETA', 'SUTA', 'SCTA', 'WETA', 'NOCA', 'PYRR', 'RBGR', 'BHGR', 'BLGR', 'LAZB', 'INBU', 'VABU', 'PABU', 'DICK', 'HOSP', 'NRBI', 'OCHW', 'BRMA', 'SBMU', 'PTWH')\n",
+    "    --# and species not in ('SOSP')\n",
+    "    and S.quality in ('A', 'B')\n",
+    "    --# and species_species_group not in ('Wrens')\n",
+    "    --# and species_species_group in ('Wrens')\n",
+    "    and source_id not in ('xc:72445')\n",
+    "--# limit 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
