mobile: Faster app startup (~5s->1s) via metadata/*.json i/o db queries

--- a/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
+++ b/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "time": "2.675s"
+   },
    "outputs": [],
    "source": [
     "# sqlite_path = '/Users/danb/hack/birdgram/mobile/app/assets/payloads/CA100/search_recs/search_recs.sqlite3'\n",
@@ -666,14 +668,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3 -Iplan -Olen\n",
+    "select distinct source_id, species\n",
+    "from search_recs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3 -Iplan -Olen\n",
+    "select distinct xc_id, species\n",
+    "from search_recs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3 -Iplan -Olen\n",
+    "select xc_id, species\n",
+    "from search_recs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
