--- a/model/notebooks/scratch.ipynb
+++ b/model/notebooks/scratch.ipynb
@@ -642,6 +642,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "(xc.metadata\n",
+    "    [['id', 'species']]\n",
+    "    .rename(columns={'id': 'xc_id'})\n",
+    "    .astype({'xc_id': 'str'})\n",
+    "    .set_index('xc_id')\n",
+    "    ['species']\n",
+    "    [:3]\n",
+    "    .to_dict()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "(xc.metadata\n",
+    "    [['id', 'species']]\n",
+    "    [lambda df: df.isnull()]\n",
+    "    [:3]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
