mobile: Fix d_pc=null (gah!); more/less recs; filter by quality

--- a/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
+++ b/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "2.675s"
+    "time": "2.38s"
    },
    "outputs": [],
    "source": [
@@ -701,14 +701,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3\n",
+    "select\n",
+    "    quality as x,\n",
+    "    count(*) as y\n",
+    "from search_recs\n",
+    "where species='CORA'\n",
+    "group by x\n",
+    "order by y desc\n",
+    "limit 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
