--- a/model/notebooks/scratch.ipynb
+++ b/model/notebooks/scratch.ipynb
@@ -674,14 +674,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "n = 1.5\n",
+    "xs = [1,2,3,4]\n",
+    "np.linalg.norm(xs, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
