mobile/Search: Add sorting; improve shuffle (random species i/o recs)

--- a/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
+++ b/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "2.38s"
+    "time": "2.565s"
    },
    "outputs": [],
    "source": [
@@ -711,6 +711,25 @@
     "group by x\n",
     "order by y desc\n",
     "limit 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "2.364s"
+   },
+   "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3\n",
+    "select xc_id, country, state, lat, lng\n",
+    "from (\n",
+    "    select *\n",
+    "    from search_recs\n",
+    "    order by random()\n",
+    "    limit 10\n",
+    ")\n",
+    "order by lat desc"
    ]
   },
   {
