mobile/Places: Add places from ebird!

--- a/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
+++ b/model/notebooks/190226_mobile_dev_search_sqlite.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "2.565s"
+    "time": "2.371s"
    },
    "outputs": [],
    "source": [
@@ -730,6 +730,33 @@
     "    limit 10\n",
     ")\n",
     "order by lat desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3 -T\n",
+    "select *\n",
+    "from search_recs\n",
+    "limit 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "1.322s"
+   },
+   "outputs": [],
+   "source": [
+    "%%sqla -ceng -p3\n",
+    "select species, species_longhand, species_com_name\n",
+    "from search_recs\n",
+    "where species_longhand like '%mallar%'\n",
+    "limit 10"
    ]
   },
   {
