--- a/model/notebooks/180802_ebird_counters_comp.ipynb
+++ b/model/notebooks/180802_ebird_counters_comp.ipynb
@@ -277,76 +277,6 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################                                                                      ] | 22% Completed |  0.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[############################                                                              ] | 31% Completed |  0.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##########################################                                                ] | 47% Completed |  0.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[################################################                                          ] | 54% Completed |  0.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###############################################################                           ] | 70% Completed |  0.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###################################################################                       ] | 75% Completed |  0.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##############################################################################            ] | 86% Completed |  0.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################################################################      ] | 93% Completed |  1.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################################################################      ] | 93% Completed |  1.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################################################################      ] | 93% Completed |  1.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################################################################      ] | 93% Completed |  1.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#####################################################################################     ] | 95% Completed |  1.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#######################################################################################   ] | 96% Completed |  1.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
      "text": "\r[##########################################################################################] | 100% Completed |  1.7s"
     },
     {
@@ -440,106 +370,6 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  0.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  1.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  1.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#                                                                                         ] | 1% Completed |  1.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#####                                                                                     ] | 6% Completed |  1.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#####                                                                                     ] | 6% Completed |  1.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###############                                                                           ] | 16% Completed |  1.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#############################################                                             ] | 50% Completed |  1.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###############################################                                           ] | 53% Completed |  1.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###############################################                                           ] | 53% Completed |  1.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[################################################                                          ] | 54% Completed |  2.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###############################################################################           ] | 87% Completed |  2.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
      "text": "\r[##########################################################################################] | 100% Completed |  2.3s"
     },
     {
@@ -574,11 +404,6 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
      "text": "\r[##########################################################################################] | 100% Completed |  0.1s"
     },
     {
@@ -594,11 +419,6 @@
      "metadata": {},
      "output_type": "display_data",
      "transient": {}
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
     },
     {
      "name": "stdout",
@@ -1006,11 +826,6 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
      "text": "\r[##########################################################################################] | 100% Completed |  0.1s"
     },
     {
@@ -1328,6 +1143,7 @@
    ],
    "source": [
     "# Plot barcharts: priors[geohash4==...][species, week, p]\n",
+    "#   - NOTE geohash_pm turned into EbirdPriors.loc_smooth\n",
     "geohash4s = geohash_pm(1, geohash_encode(37.9, -122, 4))  # Orinda ±1 (includes: SF, Berkeley hills, Mt Diablo, Marin)\n",
     "(priors_df\n",
     "    [lambda df: df.geohash4.isin(geohash4s)]\n",
@@ -2248,9 +2064,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
