model/notebooks/scratch.ipynb

--- a/model/notebooks/scratch.ipynb
+++ b/model/notebooks/scratch.ipynb
@@ -3,10 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "time": "6.345s"
+   },
    "outputs": [],
    "source": [
     "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matplotlib qualitative color maps as js object\n",
+    "#   - https://matplotlib.org/examples/color/colormaps_reference.html\n",
+    "import matplotlib as mpl\n",
+    "print('const colors = {\\n%s\\n};' % '\\n'.join([\n",
+    "    '  %s: %s,' % (palette, json.dumps([\n",
+    "        mpl.colors.rgb2hex(x)\n",
+    "        for x in getattr(mpl.cm, palette).colors\n",
+    "    ]))\n",
+    "    for palette in [\n",
+    "        'Pastel1',\n",
+    "        'Pastel2',\n",
+    "        'Paired',\n",
+    "        'Accent',\n",
+    "        'Dark2',\n",
+    "        'Set1',\n",
+    "        'Set2',\n",
+    "        'Set3',\n",
+    "        'tab10',\n",
+    "        'tab20',\n",
+    "        'tab20b',\n",
+    "        'tab20c',\n",
+    "    ]\n",
+    "]))"
    ]
   },
   {
@@ -690,9 +723,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "bubo-features",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "bubo-features"
   }
  },
  "nbformat": 4,
