model/notebooks/20191117_explore_coverage_xc_vs_ebird.ipynb

--- a/model/notebooks/20180927_api_dev_search_recs_parquet.ipynb
+++ b/model/notebooks/20180927_api_dev_search_recs_parquet.ipynb
@@ -262,6 +262,7 @@
     "%time out = pd.read_parquet(path, engine='fastparquet')\n",
     "pd.testing.assert_frame_equal(\n",
     "    df0,\n",
+    "    # FIXME Update for new df_transform_cats api\n",
     "    out.pipe(df_transform_cats, ordered=True, col_names=cat_cols),  # FIXME categories come out as ordered=False\n",
     "    check_index_type=True, check_column_type=True,\n",
     ")"
@@ -614,6 +615,7 @@
     "        # TODO TODO Manually save df.dtypes to restore categories (and dtypes generally)\n",
     "        #   - Then we win! (fingers crossed...)\n",
     "        .pipe(df_reorder_cols, last=feat_cols)\n",
+    "        # FIXME Update for new df_transform_cats api\n",
     "        .pipe(df_transform_cats, ordered=True, col_names=[k for k in loaded if loaded[k].dtype.name == 'category'])\n",
     "    ),\n",
     "    check_index_type=True,\n",
@@ -631,9 +633,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
