--- a/model/notebooks/20190808_ebird_bq_priors.ipynb
+++ b/model/notebooks/20190808_ebird_bq_priors.ipynb
@@ -119,6 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO TODO Switch to python functions that inline these bodies into the sql, to get our cache hits back\n",
+    "\n",
     "# TODO Why do these defs prevent bq cache hits?\n",
     "bqq = BQQ(defs='''\n",
     "\n",
@@ -1388,7 +1390,8 @@
     "- In the middle of rolling out the new structured bqq.query(...) api, to replace the old bqq('...') api\n",
     "    - Done above ^, TODO below v\n",
     "- Then, back to debugging smoothing\n",
-    "    - Still (maybe) some bugs to debug, where neighboring geo bins don't look right wrt. subbins (using BGGN plots below)"
+    "    - Still (maybe) some bugs to debug, where neighboring geo bins don't look right wrt. subbins (using BGGN plots below)\n",
+    "- Also, see the TODO TODO above re switching from bq funcs to python funcs to restore bq cache hits"
    ]
   },
   {
@@ -1816,6 +1819,7 @@
    ],
    "source": [
     "# Base data\n",
+    "#   - Use HLL to count distinct checklist ids per group (can't just count rows, since many rows per checklist)\n",
     "a = (bqq\n",
     "    .query(\n",
     "        from_=f\"{table} e left join metadata.species s on (s.com_name = e.common_name)\",\n",
@@ -1990,7 +1994,8 @@
     }
    ],
    "source": [
-    "# Smooth across expanded geo\n",
+    "# Aggregate across expanded geo\n",
+    "#   - Smooth if requested\n",
     "#   - Using group-by-and-join i/o a single windowed query b/c the latter failed on resources and the former doesn't\n",
     "#   - And hll_count.merge isn't supported in analytic queries (ugh), so we have to group-by-and-join to use that\n",
     "c = (bqq\n",
@@ -2318,9 +2323,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features"
+   "name": "python"
   }
  },
  "nbformat": 4,
