--- a/model/notebooks/20180524_eval_birdclef.ipynb
+++ b/model/notebooks/20180524_eval_birdclef.ipynb
@@ -159,266 +159,6 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  1.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  1.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[################                                                                          ] | 18% Completed |  1.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  1.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  2.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################                                                                      ] | 22% Completed |  2.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  2.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  3.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  3.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 40% Completed |  3.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##########################################                                                ] | 47% Completed |  3.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  3.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  3.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  3.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  3.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  3.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  3.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  4.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  4.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[######################################################                                    ] | 60% Completed |  4.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#########################################################                                 ] | 63% Completed |  4.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[###################################################################                       ] | 75% Completed |  4.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  4.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  4.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  4.8s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  4.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  5.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  5.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  5.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[########################################################################                  ] | 80% Completed |  5.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##########################################################################                ] | 82% Completed |  5.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
      "text": "\r[##########################################################################################] | 100% Completed |  5.5s"
     },
     {
@@ -576,6 +316,7 @@
    "outputs": [],
    "source": [
     "(search.coverage_error(recs_test, by='species')\n",
+    "    # FIXME Update for new df_transform_cats api\n",
     "    .pipe(lambda df: df_transform_cats(df, ['species'], f=lambda _: df.sort_values('coverage_error').species))\n",
     "    .pipe(ggplot, aes(x='species', y='coverage_error'))\n",
     "    + geom_point()\n",
