--- a/model/notebooks/20180524_fit_search.ipynb
+++ b/model/notebooks/20180524_fit_search.ipynb
@@ -139,51 +139,6 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.0s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[                                                                                          ] | 0% Completed |  0.1s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[############                                                                              ] | 14% Completed |  0.2s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[##################                                                                        ] | 20% Completed |  0.3s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 41% Completed |  0.4s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[####################################                                                      ] | 41% Completed |  0.5s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#######################################################                                   ] | 61% Completed |  0.6s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[#########################################################                                 ] | 64% Completed |  0.7s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\r[############################################################################              ] | 84% Completed |  0.9s"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
      "text": "\r[##########################################################################################] | 100% Completed |  1.0s"
     },
     {
@@ -353,6 +308,7 @@
    ],
    "source": [
     "(search.coverage_error_by(recs_test, 'species')\n",
+    "    # FIXME Update for new df_transform_cats api\n",
     "    .pipe(lambda df: df_transform_cats(df, ['species'], f=lambda _: df.sort_values('coverage_error').species))\n",
     "    .pipe(ggplot, aes(x='species', y='coverage_error'))\n",
     "    + geom_point()\n",
