model/notebooks: Generate mpl colors for mobile

--- a/model/notebooks/scratch.ipynb
+++ b/model/notebooks/scratch.ipynb
@@ -4,11 +4,183 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "time": "6.345s"
+    "time": "2.385s"
    },
    "outputs": [],
    "source": [
     "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XXX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Dark2'),\n",
+    "    [stringcase.camelcase('_'.join(xs)).replace('_', '') for xs in product(\n",
+    "        ['green1', 'brown', 'purple', 'pink', 'green2', 'yellow', 'brown', 'gray'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Accent'),\n",
+    "    [stringcase.camelcase('_'.join(xs)).replace('_', '') for xs in product(\n",
+    "        ['green', 'purple', 'orange', 'yellow', 'blue', 'red', 'brown', 'gray'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Pastel2'),\n",
+    "    [stringcase.camelcase('_'.join(xs)).replace('_', '') for xs in product(\n",
+    "        ['green', 'orange', 'blue', 'purple', 'lime', 'yellow', 'brown', 'gray'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Pastel1'),\n",
+    "    [stringcase.camelcase('_'.join(xs)).replace('_', '') for xs in product(\n",
+    "        ['red', 'blue', 'green', 'purple', 'orange', 'yellow', 'brown', 'pink', 'gray'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('tab20c'),\n",
+    "    [stringcase.camelcase('_'.join(xs)).replace('_', '') for xs in product(\n",
+    "        ['blue', 'orange', 'green', 'purple', 'gray'],\n",
+    "        ['0', '1', '2', '3'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('tab20b'),\n",
+    "    [stringcase.camelcase('_'.join(xs)).replace('_', '') for xs in product(\n",
+    "        ['blue', 'green', 'yellow', 'red', 'purple'],\n",
+    "        ['0', '1', '2', '3'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Paired'),\n",
+    "    [stringcase.camelcase('_'.join(reversed(xs))) for xs in product(\n",
+    "        ['blue', 'green', 'red', 'orange', 'purple', 'brown'],\n",
+    "        ['light', 'dark'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Set3'),\n",
+    "    [stringcase.camelcase('_'.join(xs)) for xs in product(\n",
+    "        ['teal', 'yellow', 'mauve', 'salmon', 'blue', 'orange', 'green', 'pink', 'gray', 'purple', 'sea', 'lemon'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('Set2'),\n",
+    "    [stringcase.camelcase('_'.join(xs)) for xs in product(\n",
+    "        ['green', 'orange', 'blue', 'purple', 'lightGreen', 'yellow', 'brown', 'gray'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('tab10'),\n",
+    "    [stringcase.camelcase('_'.join(xs)) for xs in product(\n",
+    "        ['blue', 'orange', 'green', 'red', 'purple', 'brown', 'pink', 'gray', 'olive', 'cyan'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[print(f'  {name}: {hex!r},') for hex, name in zip_longest(\n",
+    "    mpl_cmap_colors_to_hex('tab20'),\n",
+    "    [stringcase.camelcase('_'.join(xs)) for xs in product(\n",
+    "        ['dark', 'light'],\n",
+    "        ['blue', 'orange', 'green', 'red', 'purple', 'brown', 'pink', 'gray', 'olive', 'cyan'],\n",
+    "    )],\n",
+    ")];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XXX"
    ]
   },
   {
@@ -723,9 +895,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features"
+   "name": "python"
   }
  },
  "nbformat": 4,
